# substrate-parachain-ssvm

./: cumulus.patch  para-200-genesis  para-200-wasm  polkdot.patch
node/: Cargo.toml
node/src/: chain_spec.rs
pallets/parachain-info/: Cargo.toml
pallets/template/: Cargo.toml
pallets/token-dealer/: Cargo.toml
pallets/token-dealer/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
