[package]
name = 'parachain-collator'
version = '0.1.0'
authors = ["Parity Technologies <admin@parity.io>"]
build = 'build.rs'
edition = '2018'

[[bin]]
name = 'parachain-collator'
path = 'src/main.rs'

[dependencies]
derive_more = '0.15.0'
exit-future = '0.1.4'
futures = { version = "0.3.1", features = ["compat"] }
log = '0.4.8'
parking_lot = '0.9.0'
trie-root = '0.15.2'
codec = { package = 'parity-scale-codec', version = '1.0.0' }
structopt = "0.3.3"
ansi_term = "0.12.1"
serde = { version = "1.0.101", features = ["derive"] }

# Parachain dependencies
parachain-runtime = { path = "../runtime" }

# Substrate dependencies
sc-consensus = { path = "../../substrate/client/consensus/common" }
sc-cli = { path = "../../substrate/client/cli" }
sc-client-api = { path = "../../substrate/client/api" }
sc-executor = { path = "../../substrate/client/executor" }
sc-service = { path = "../../substrate/client/service" }
sc-transaction-pool = { path = "../../substrate/client/transaction-pool" }
sc-network = { path = "../../substrate/client/network" }
sc-basic-authorship = { path = "../../substrate/client/basic-authorship", version = "0.8.0-rc5" }
sc-finality-grandpa = { path = "../../substrate/client/finality-grandpa" }
sc-informant = { path = "../../substrate/client/informant" }
sc-chain-spec = { path = "../../substrate/client/chain-spec" }
sp-runtime = { path = "../../substrate/primitives/runtime", default-features = false }
sp-io = { path = "../../substrate/primitives/io" }
sp-api = { path = "../../substrate/primitives/api" }
sp-core = { path = "../../substrate/primitives/core" }
sp-inherents = { path = "../../substrate/primitives/inherents" }
sp-consensus = { path = "../../substrate/primitives/consensus/common" }
sp-session = { path = "../../substrate/primitives/session" }
sp-offchain = { path = "../../substrate/primitives/offchain" }
sp-block-builder = { path = "../../substrate/primitives/block-builder" }
sp-blockchain = { path = "../../substrate/primitives/blockchain" }
sp-timestamp = { path = "../../substrate/primitives/timestamp" }
sp-trie = { path = "../../substrate/primitives/trie" }
sp-transaction-pool = { path = "../../substrate/primitives/transaction-pool" }

# Cumulus dependencies
cumulus-consensus = { path = "../../cumulus/consensus" }
cumulus-collator = { path = "../../cumulus/collator" }
cumulus-network = { path = "../../cumulus/network" }
cumulus-primitives = { path = "../../cumulus/primitives" }
cumulus-service = { path = "../../cumulus/service" }

# Polkadot dependencies
polkadot-primitives = { path = "../../polkadot/primitives" }
polkadot-collator = { path = "../../polkadot/collator" }
polkadot-service = { path = "../../polkadot/service" }
polkadot-cli = { path = "../../polkadot/cli" }
polkadot-test-service = { path = "../../polkadot/node/test-service" }
polkadot-parachain = { path = "../../polkadot/parachain" }

# ssvm = { package = 'pallet-ssvm', git = 'https://github.com/second-state/pallet-ssvm', tag = 'v0.0.1' }
ssvm = { package = 'pallet-ssvm', path = "../../pallet-ssvm" }

[build-dependencies]
substrate-build-script-utils = { path = "../../substrate/utils/build-script-utils" }

[dev-dependencies]
assert_cmd = "0.12"
nix = "0.17"
rand = "0.7.3"
tokio = { version = "0.2.13", features = ["macros"] }

# Polkadot dependencies
polkadot-runtime-common = { path = "../../polkadot/runtime/common" }
polkadot-test-runtime = { path = "../../polkadot/runtime/test-runtime" }
polkadot-test-runtime-client = { path = "../../polkadot/runtime/test-runtime/client" }
polkadot-test-service = { path = "../../polkadot/node/test-service" }

# Substrate dependencies
pallet-sudo = { path = "../../substrate/frame/sudo" }
substrate-test-client = { path = "../../substrate/test-utils/client" }
substrate-test-runtime-client = { path = "../../substrate/test-utils/runtime/client" }
