[package]
name = 'parachain-runtime'
version = '0.1.0'
authors = ["Parity Technologies <admin@parity.io>"]
edition = '2018'

[dependencies]
serde = { version = "1.0.101", default-features = false, optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }

parachain-info = { path = "../pallets/parachain-info", default-features = false}
cumulus-token-dealer = { path = "../pallets/token-dealer", default-features = false}
template = { package = "pallet-template", path = "../pallets/template", version = "2.0.0-rc5", default-features = false}

# Substrate dependencies
sp-std = { path = "../../substrate/primitives/std", default-features = false }
sp-api = { path = "../../substrate/primitives/api", default-features = false }
sp-io = { path = "../../substrate/primitives/io", default-features = false }
sp-version = { path = "../../substrate/primitives/version", default-features = false }
sp-runtime = { path = "../../substrate/primitives/runtime", default-features = false }
sp-core = { path = "../../substrate/primitives/core", default-features = false }
sp-session = { path = "../../substrate/primitives/session", default-features = false }
sp-offchain = { path = "../../substrate/primitives/offchain", default-features = false }
sp-block-builder = { path = "../../substrate/primitives/block-builder", default-features = false }
sp-transaction-pool = { path = "../../substrate/primitives/transaction-pool", default-features = false }
sp-inherents = { path = "../../substrate/primitives/inherents", default-features = false }

frame-support = { path = "../../substrate/frame/support", default-features = false }
frame-executive = { path = "../../substrate/frame/executive", default-features = false }
frame-system = { path = "../../substrate/frame/system", default-features = false }
pallet-balances = { path = "../../substrate/frame/balances", default-features = false }
pallet-randomness-collective-flip = { path = "../../substrate/frame/randomness-collective-flip", default-features = false }
pallet-timestamp = { path = "../../substrate/frame/timestamp", default-features = false }
pallet-sudo = { path = "../../substrate/frame/sudo", default-features = false }
pallet-transaction-payment = { path = "../../substrate/frame/transaction-payment", default-features = false }
pallet-authorship = { version = "2.0.0-rc5", default-features = false, path = "../../substrate/frame/authorship" }

# Cumulus dependencies
cumulus-runtime = { path = "../../cumulus/runtime", default-features = false }
cumulus-parachain-upgrade = { path = "../../cumulus/parachain-upgrade", default-features = false }
cumulus-message-broker = { path = "../../cumulus/message-broker", default-features = false }
cumulus-upward-message = { path = "../../cumulus/upward-message", default-features = false }
cumulus-primitives = { path = "../../cumulus/primitives", default-features = false }

[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.6" }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"serde",
	"sp-api/std",
	"sp-std/std",
	"sp-io/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-version/std",
	"sp-offchain/std",
	"sp-session/std",
	"sp-block-builder/std",
	"sp-transaction-pool/std",
	"sp-inherents/std",
	"frame-support/std",
	"frame-executive/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-randomness-collective-flip/std",
	"pallet-timestamp/std",
	"pallet-sudo/std",
	"pallet-transaction-payment/std",
	"pallet-authorship/std",
	"parachain-info/std",
	"cumulus-runtime/std",
	"cumulus-parachain-upgrade/std",
	"cumulus-message-broker/std",
	"cumulus-upward-message/std",
	"cumulus-primitives/std",
	"cumulus-token-dealer/std",
	"template/std",
]
# Will be enabled by the `wasm-builder` when building the runtime for WASM.
runtime-wasm = [
	"cumulus-upward-message/runtime-wasm",
]
