[package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
name = "parachain-info"
version = "0.1.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }

frame-support = { path = "../../../substrate/frame/support", default-features = false }
frame-system = { path = "../../../substrate/frame/system", default-features = false }

cumulus-primitives = { path = "../../../cumulus/primitives", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "serde",
    "cumulus-primitives/std",
    "frame-support/std",
    "frame-system/std",
]
