[package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
name = "cumulus-token-dealer"
version = "0.1.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }

frame-support = { path = "../../../substrate/frame/support", default-features = false }
frame-system = { path = "../../../substrate/frame/system", default-features = false }

# Cumulus dependencies
cumulus-upward-message = { path = "../../../cumulus/upward-message", default-features = false }
cumulus-primitives = { path = "../../../cumulus/primitives", default-features = false }

# Polkadot dependencies
polkadot-parachain = { path = "../../../polkadot/parachain", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "cumulus-upward-message/std",
    "cumulus-primitives/std",
    "frame-support/std",
    "frame-system/std",
    "polkadot-parachain/std",
]
