[package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
name = "cumulus-token-dealer"
version = "0.1.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
sp-std = { version = "2.0.0-rc5", default-features = false, path = "../../../substrate/primitives/std" }
sp-staking = { version = "2.0.0-rc5", default-features = false, path = "../../../substrate/primitives/staking" }
sp-core = { path = "../../../substrate/primitives/core", default-features = false }
frame-support = { path = "../../../substrate/frame/support", default-features = false }
frame-system = { path = "../../../substrate/frame/system", default-features = false }
pallet-session = { version = "2.0.0-rc5", default-features = false, features = ["historical"], path = "../../../substrate/frame/session" }
pallet-authorship = { version = "2.0.0-rc5", default-features = false, path = "../../../substrate/frame/authorship" }
pallet-timestamp = { path = "../../../substrate/frame/timestamp", default-features = false }
rustc-hex = { version = "2.1.0", default-features = false }

# Cumulus dependencies
cumulus-upward-message = { path = "../../../cumulus/upward-message", default-features = false }
cumulus-primitives = { path = "../../../cumulus/primitives", default-features = false }

# Polkadot dependencies
polkadot-parachain = { path = "../../../polkadot/parachain", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "sp-std/std",
    "sp-staking/std",
    "cumulus-upward-message/std",
    "cumulus-primitives/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-session/std",
    "pallet-authorship/std",
    "polkadot-parachain/std",
    "rustc-hex/std",
]
